sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: value +- is not a member of Int
        c=i-j-1+-
               ^